--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -21,7 +21,7 @@ body {
   overflow-x: hidden;
   min-height: 100vh;
   font-family: 'Cantarell', sans-serif;
-  background-color: $color-primary--light;
+  background-color: $color-primary;
   input:-webkit-autofill,
   input:-webkit-autofill:focus {
     transition: background-color 600000s 0s, color 600000s 0s;
