--- a/src/components/dashboard/project/ProjectMember/ProjectMemberList.module.scss
+++ b/src/components/dashboard/project/ProjectMember/ProjectMemberList.module.scss
@@ -11,4 +11,20 @@
     font-size: 20px;
     font-weight: bold;
   }
+
+  .usersList {
+    display: flex;
+    align-items: center;
+
+    .hiddenUsersList {
+      font-size: $font-small;
+      margin-left: 1.2rem;
+      background: transparent;
+      border: none;
+
+      &:hover {
+        color: $color-accent--text;
+      }
+    }
+  }
 }
