--- a/src/components/dashboard/project/ProjectMember/ProjectMemberItem.module.scss
+++ b/src/components/dashboard/project/ProjectMember/ProjectMemberItem.module.scss
@@ -10,8 +10,36 @@
   width: 52px;
   height: 52px;
   margin-left: -15px;
+  position: relative;
 
   .user_avatar {
     border-radius: 50%;
+  }
+
+  .name_popup {
+    position: absolute;
+    z-index: 1000;
+    top: 100%;
+    background: $color-light-grey;
+    width: min-content;
+    white-space: nowrap;
+    transform: translateY(50%);
+    padding: 0.4rem 0.6rem;
+    border-radius: 4px;
+    h5 {
+      font-size: 1rem;
+      color: $color-primary--dark;
+    }
+
+    &::before {
+      content: '';
+      position: absolute;
+      bottom: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      border-width: 6px;
+      border-style: solid;
+      border-color: transparent transparent $color-light-grey transparent;
+    }
   }
 }
