add all active users popup

--- a/styles/constants/scssVariables.scss
+++ b/styles/constants/scssVariables.scss
@@ -18,6 +18,7 @@ $color-placeholder: var(--color-placeholder);
 $color-light: var(--color-light);
 $color-task: var(--color-task);
 $color-over: var(--color-over);
+$color-light-grey: var(--color-light-grey);
 
 $font-headings: 'Oswald', sans-serif;
 $font-text: 'Cantarell', sans-serif;
